set(LGK_TESTS thread fdset_input queue_int threadpool timespec_ms bitmap fsm)

foreach(name IN LISTS LGK_TESTS)
    add_executable(test_${name} test_${name}.c)
    target_link_libraries(test_${name} PRIVATE libgorak)
    add_test(NAME test_${name} COMMAND test_${name})
endforeach()

function(add_tnt_test suffix)
    add_executable(test_tnt_${suffix} test_tnt.c)
    target_link_libraries(test_tnt_${suffix} PRIVATE libgorak)
    target_compile_definitions(test_tnt_${suffix} PRIVATE ${ARGN})
    add_test(NAME test_tnt_${suffix} COMMAND test_tnt_${suffix})
endfunction()

add_tnt_test(default)
add_tnt_test(no_errno LGK_TNT_NO_ERRNO)
add_tnt_test(no_shorts LGK_TNT_NO_TRACE_SHORTS)
add_tnt_test(no_errno_shorts LGK_TNT_NO_ERRNO LGK_TNT_NO_TRACE_SHORTS)
add_tnt_test(ndebug NDEBUG)
add_tnt_test(custom_prefix LGK_TNT_TRAP_LABEL_PREFIX=err)
add_tnt_test(custom_print LGK_TNT_PRINT_DEFAULT=lgk_tnt_print_stderr_nosource)
add_tnt_test(level_warning LGK_TNT_OUTPUT_LEVEL=TRACE_LEVEL_WARNING)
add_tnt_test(dynamic LGK_TNT_OUTPUT_LEVEL_DYNAMIC)
